# OS-Experiment

./: .gitignore  CMakeLists.txt  README.md  开发文档.md
.github/workflows/: detect_proto_changes.sh  main.yml  protobuf.yml
code review/: cr1.md  cr2.md  cr3.md  cr4.md  cr5.md
doc/: 代码规范.md  大型项目开发帮助-1.md
doc/图表/: 项目结构.wsd
doc/环境搭建/Qt环境/: Qt安装.md
doc/环境搭建/vscode环境/: vscode配置.md
protobuf/: t1.pb.cc  t1.pb.h  t3.pb.cc  t3.pb.h  t3.proto  t4.pb.cc  t4.pb.h  t4.proto  t5.pb.cc  t5.pb.h  t5.proto
src/: CLOCK.cpp  FatTest.cpp  FatTest.h  HelloWorld.cpp  HelloWorld.h  HelloWorld.ui  Memory.h  MemoryManager.h  OS.h  ProcessManager.cpp  clock.cpp  directory.cpp  disk.cpp  disk.h  disk_info.txt  file_control.cpp  file_control.h  main.cpp  memory.cpp  memory.h  memoryBlock.h  memory_for_file.h  memory_for_process.h  process_for_others.h  process_manager.h  tree_directory.cpp  tree_directory.h
src/UI/: ui.h
src/UI/filewindow_txt/: txt_window.cpp  txt_window.h
src/UI/mycomputer/: tip.txt
src/UI/status_bar/: status_bar.cpp  status_bar.h  status_bar_window.cpp  status_bar_window.h
src/UI/task_manager/: tab_disk.cpp  tab_disk.h  tab_groupblock.cpp  tab_groupblock.h  tab_memory.cpp  tab_memory.h  tab_process.cpp  tab_process.h  task_manager.cpp  task_manager.h
src/UI/win/: date_time_Label.cpp  date_time_Label.h  win.cpp  win.h  win_window.cpp  win_window.h
src/application/: OS.cpp
src/disk/: disk.cpp
src/file/: tree_directory.cpp  tree_directory.h
src/memory/: memory.cpp  memory_for_process.h
src/process/: ProcessManager.cpp  process_manager.h
src/protobuf/: t2.proto
src/ui_controller/: os_ui_controller.cpp  os_ui_controller.h
weekly meeting/: wm1.md
